# ArcRaiders-AutoScrapper

./: .gitignore  .kilocodeignore  .lsp.json  .mcp.json  .pre-commit-config.yaml  .rumdl.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  biome.json  detect_tesseract.py  grid_navigation.py  inventory_domain.py  inventory_scanner.py  merge_and_push.sh  pyproject.toml  requirements.txt  setup.cfg  ui_backend.py  vision_ocr.py
.claude/: settings.json
.claude/agents/: interaction-reviewer.md  ocr-reviewer.md  rules-reviewer.md  scan-validator.md  visual-analysis-ocr.md
.claude/skills/add-rule/: SKILL.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/ci-promote/: SKILL.md
.claude/skills/config-bump/: SKILL.md
.claude/skills/data-snapshot-updater/: SKILL.md
.claude/skills/dead-code-sweep/: SKILL.md
.claude/skills/failure-to-fix/: SKILL.md
.claude/skills/ocr-corpus-replay/: SKILL.md
.claude/skills/ocr-debug/: SKILL.md
.claude/skills/ocr-unavailable/: SKILL.md
.claude/skills/patch-update/: SKILL.md
.claude/skills/precommit-fix/: SKILL.md
.claude/skills/scan-failed/: SKILL.md
.claude/skills/scan-report/: SKILL.md
.claude/skills/threshold-corpus-replay/: SKILL.md
.claude/skills/todo-scan/: SKILL.md
.claude/skills/triage-failures/: SKILL.md
.claude/skills/upstream-sync/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/: copilot-instructions.md
.github/instructions/: bash.instructions.md  cicd-standards.instructions.md  cmd.instructions.md  code-review.instructions.md  markdown.instructions.md  powershell.instructions.md  python.instructions.md  quality-standards.instructions.md  token-efficient.instructions.md
.github/skills/codebase-index/: SKILL.md
.github/skills/copilot-init/: SKILL.md
.github/skills/docs-writer/: SKILL.md
.github/skills/gh-cli/: SKILL.md
.github/skills/language-optimization/: SKILL.md
.github/skills/lint-and-validate/: SKILL.md
.github/skills/mcp-use/: SKILL.md
.github/skills/repo-janitor/: SKILL.md
.github/skills/update-data/: SKILL.md
.github/skills/validate/: SKILL.md
.github/skills/workflow-development/: SKILL.md
.github/workflows/: bandit.yml  biome.yml  black.yml  copilot-setup-steps.yml  daily-data-update.yml  pyre.yml  ruff.yml  tests.yml
.kilo/: CROSS_REFERENCE.md  kilo.json
.kilo/agents/: api-reviewer.md  config-reviewer.md  data-pipeline-reviewer.md  interaction-reviewer.md  ocr-reviewer.md  performance-reviewer.md  progress-reviewer.md  rules-reviewer.md  scan-validator.md  security-reviewer.md  tui-reviewer.md  visual-analysis-ocr.md
.kilo/commands/: add-fixture.md  add-rule.md  benchmark.md  calibrate-vision.md  ci-promote.md  clean-debug.md  config-bump.md  dead-code-sweep.md  diagnose-scan.md  metaforge.md  ocr-corpus-replay.md  patch-update.md  precommit-fix.md  run-app.md  scan-dryrun.md  scan-report.md  threshold-change.md  todo-scan.md  triage-failures.md  verify.md
.kilo/rules/: rtk-rules.md
.kilo/skills/add-fixture/: SKILL.md
.kilo/skills/add-rule/: SKILL.md
.kilo/skills/benchmark/: SKILL.md
.kilo/skills/calibrate-vision/: SKILL.md
.kilo/skills/ci-promote/: SKILL.md
.kilo/skills/clean-debug/: skill.md
.kilo/skills/config-bump/: SKILL.md
.kilo/skills/data-snapshot-updater/: SKILL.md
.kilo/skills/dead-code-sweep/: SKILL.md
.kilo/skills/failure-to-fix/: SKILL.md
.kilo/skills/metaforge-arc-raiders/: SKILL.md
.kilo/skills/ocr-corpus-replay/: SKILL.md
.kilo/skills/ocr-debug/: SKILL.md
.kilo/skills/threshold-change/: SKILL.md
.kilo/skills/threshold-corpus-replay/: SKILL.md
.kilo/skills/todo-scan/: SKILL.md
.kilo/skills/triage-failures/: SKILL.md
.kilo/skills/upstream-sync/: SKILL.md
.kilo/skills/verify/: SKILL.md
.kilocode/: mcp.json
.kilocode/skills/rules-reviewer/: SKILL.md
.kilocode/skills/update-data/: SKILL.md
.opencode/: opencode.json
.opencode/agents/: api-reviewer.md  config-reviewer.md  data-pipeline-reviewer.md  interaction-reviewer.md  ocr-reviewer.md  performance-reviewer.md  progress-reviewer.md  rules-reviewer.md  scan-validator.md  security-reviewer.md  tui-reviewer.md  visual-analysis-ocr.md
.opencode/command/: validate.md
.opencode/skills/add-fixture/: SKILL.md
.opencode/skills/calibrate-vision/: SKILL.md
.opencode/skills/ci-promote/: SKILL.md
.opencode/skills/clean-debug/: skill.md
.opencode/skills/config-bump/: SKILL.md
.opencode/skills/data-snapshot-updater/: SKILL.md
.opencode/skills/dead-code-sweep/: SKILL.md
.opencode/skills/diagnose-scan/: skill.md
.opencode/skills/failure-to-fix/: SKILL.md
.opencode/skills/metaforge-arc-raiders/: SKILL.md
.opencode/skills/ocr-corpus-replay/: SKILL.md
.opencode/skills/ocr-unavailable/: SKILL.md
.opencode/skills/patch-update/: SKILL.md
.opencode/skills/scan-failed/: SKILL.md
.opencode/skills/scan-report/: SKILL.md
.opencode/skills/threshold-change/: SKILL.md
.opencode/skills/threshold-corpus-replay/: SKILL.md
.opencode/skills/todo-scan/: SKILL.md
.opencode/skills/upstream-sync/: SKILL.md
items/: rules_cli.py
scripts/: benchmark_tessdata_models.py  replay_ocr_failure_corpus.py  setup-linux.sh  setup-windows.ps1  update_snapshot_and_defaults.py
src/autoscrapper/: __main__.py  app_warnings.py  config.py  inventory_scanner.py  warmup.py
src/autoscrapper/api/: __init__.py  client.py  datasource.py  models.py
src/autoscrapper/cli/: config.py  home.py  key_reader.py  progress.py  progress_flow.py  rules.py  scan.py  warnings.py
src/autoscrapper/core/: inventory.py  item_actions.py
src/autoscrapper/interaction/: input_driver.py  inventory_grid.py  keybinds.py  ui_windows.py
src/autoscrapper/items/: items_actions.json  items_rules.default.json  rules_cli.py  rules_diff.py  rules_store.py  rules_viewer.py
src/autoscrapper/ocr/: arc_inventory.py  inventory_vision.py  tesseract.py
src/autoscrapper/progress/: data_loader.py  data_update.py  decision_engine.py  progress_config.py  quest_inference.py  quest_overrides.py  quests.py  (+5 more)
tests/: conftest.py
tests/autoscrapper/: test_config.py  test_main.py
(+40 files in other folders)
