[project]
name = "ArcRaiders-AutoScrapper"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mss>=10.1.0",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pydirectinput-rgx>=2.1.3",
    "pynput>=1.8.1",
    "pywinctl>=0.4.1",
    "rich>=14.2.0",
    "tessdata-fast-eng>=1.0.0",
    "tesserocr>=2.9.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoscrapper"
version = "0.1.0"
description = "Arc Raiders inventory autoscrapper"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mss",
    "numpy",
    "opencv-python",
    "Pillow",
    "pydirectinput-rgx; sys_platform == 'win32'",
    "pynput; sys_platform == 'linux'",
    "pywinctl",
    "rich",
    "tessdata.fast-eng",
    "tesserocr==2.9.1; sys_platform == 'linux'",
    "tesserocr @ https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.9.1-tesseract-5.5.1/tesserocr-2.9.1-cp310-cp310-win_amd64.whl; sys_platform == 'win32' and python_version == '3.10' and platform_machine == 'AMD64'",
    "tesserocr @ https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.9.1-tesseract-5.5.1/tesserocr-2.9.1-cp311-cp311-win_amd64.whl; sys_platform == 'win32' and python_version == '3.11' and platform_machine == 'AMD64'",
    "tesserocr @ https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.9.1-tesseract-5.5.1/tesserocr-2.9.1-cp312-cp312-win_amd64.whl; sys_platform == 'win32' and python_version == '3.12' and platform_machine == 'AMD64'",
    "tesserocr @ https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.9.1-tesseract-5.5.1/tesserocr-2.9.1-cp313-cp313-win_amd64.whl; sys_platform == 'win32' and python_version == '3.13' and platform_machine == 'AMD64'",
    "tqdm",
]

[project.scripts]
autoscrapper = "autoscrapper.__main__:main"

[project.urls]
Homepage = "https://github.com/zappybiby/ArcRaiders-AutoScrapper"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autoscrapper = ["items/items_actions.json"]
