[build-system]
requires = ["uv_build>=0.11.7", "setuptools>=82.0.1", "wheel"]
build-backend = "uv_build"

[project]
name = "autoscrapper"
version = "0.2.0"
description = "Arc Raiders inventory autoscrapper"
readme = "README.md"
keywords = ["ocr", "arc-raiders", "tesseract", "text-recognition"]
requires-python = ">=3.13.13,<3.14"
dependencies = [
  "mss>=10.1.0",
  "numpy>=2.4.4",
  "opencv-python-headless>=4.13.0.92",
  "orjson>=3.11.8",
  "Pillow>=12.2.0",
  "pydirectinput-rgx; sys_platform == 'win32'",
  "pywinctl",
  "rapidfuzz>=3.14.5",
  "rich>=15.0.0",
  "textual",
  "tessdata.fast-eng>=1.0.0",
  # TODO: analyze and benchmark tessdata.best-eng https://github.com/tesseract-ocr/tessdata https://github.com/tesseract-ocr/tessdata_best
  "tesserocr==2.10.0; sys_platform == 'linux'",
  "tesserocr @ https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.10.0-tesseract-5.5.2/tesserocr-2.10.0-cp313-cp313-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.13' and platform_machine == 'AMD64'",
  "pynput>=1.8.1; sys_platform == 'linux'",
  "beautifulsoup4>=4.14.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.2",
    "deadcode>=2.4.1",
    "opencv-stubs>=0.1.3",
    "prek>=0.3.9",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "tombi>=0.9.20",
    "ty>=0.0.31",
    "vulture>=2.16",
]

[project.optional-dependencies]
# Keep [project.optional-dependencies].dev aligned with [dependency-groups].dev
# so pip and uv users install the same local tooling.
dev = [
    "basedpyright>=1.39.2",
    "ty>=0.0.31",
    "deadcode>=2.4.1",
    "prek>=0.3.9",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "vulture>=2.16"
]
linux-input = [
    "pynput; sys_platform == 'linux'",
]
scraper = [
    "requests>=2.33.1",
    "beautifulsoup4>=4.14.3",
]
rapidocr = [
    "rapidocr>=3.8.1",
    "onnxruntime>=1.24.4",
]

[project.scripts]
autoscrapper = "autoscrapper.__main__:main"

[project.urls]
Homepage = "https://github.com/Ven0m0/arc-raiders-autoscrapper"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autoscrapper = [
    "items/items_rules.default.json",
    "progress/data/*.json",
    "progress/data/static/*.json",
    "tui/*.tcss",
]

[tool.ruff]
extend-exclude = ["scripts/setup-linux.sh", "scripts/setup-windows.ps1"]
line-length = 120
target-version = "py313"
fix = true
show-fixes = true
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
  "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
log_level = "WARNING"

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportMissingModuleSource = false

[tool.vulture]
paths = ["src/", "scripts/", "tests/"]
min_confidence = 80

[tool.black]
extend-exclude = '''
^scripts/(setup-linux\.sh|setup-windows\.ps1)$
'''
