[metadata]
name = autoscrapper
version = 0.1.0
description = Arc Raiders inventory autoscrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zappybiby/ArcRaiders-AutoScrapper

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    mss
    numpy
    opencv-python
    Pillow
    pynput
    pywinctl
    rich
    tessdata.fast-eng
    tesserocr
    tqdm
python_requires = >=3.10,<3.14

[options.packages.find]
where = src

[options.package_data]
autoscrapper = items/items_actions.json
